Completed the REST EU Countries App (still want to add maps)

--- a/express/views/rest-countries-app/views/countries.pug
+++ b/express/views/rest-countries-app/views/countries.pug
@@ -6,4 +6,4 @@ html
         ul
             each country in countries
                 li
-                    a(href='/:id/'+country.id)= country.name
+                    a(href='/' + country.alpha3Code)= country.name
