--- a/project/views/login.pug
+++ b/project/views/login.pug
@@ -11,3 +11,5 @@ block content
             label(for='password') Password
             input#password.form-control(type='password' name='password')
         button.btn.btn-primary(type='submit') Submit
+        br
+        a(href='/register') Create an Account!
