random stuff for my project

--- a/project/views/layout.pug
+++ b/project/views/layout.pug
@@ -13,11 +13,13 @@ html(lang="en")
                     th 
                         a(href='/') HOME
                     th
-                        a(href='/shoes?gender=men') MEN'S SHOES
+                        a(href='/shoes') MEN
+                        //- Change to '/shoes?gender=men'
                     th
-                        a(href='/shoes?gender=women') WOMEN'S SHOES
+                        a(href='/shoes') WOMEN
+                        //- Change to '/shoes?gender=women'
                     th
-                        a(href='/login') LOG IN
+                        a(href='/login') LOGIN
         h1 Topo Shoes
         block content
         script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
