--- a/project/views/login.pug
+++ b/project/views/login.pug
@@ -6,10 +6,10 @@ block content
     form(action='/login' method='post')
         .form-group
             label(for='username') Username
-            input#username.form-control(type='text' name='username')
+            input#username.form-control(type='text' name='username' placeholder='Username' style='width:25%')
         .form-group
             label(for='password') Password
-            input#password.form-control(type='password' name='password')
+            input#password.form-control(type='password' name='password' placeholder='Password' style='width:25%')
         button.btn.btn-primary(type='submit') Submit
         br
         a(href='/register') Create an Account!
