updated mongo connection in webapps

--- a/webapps/customer-app/views/list.pug
+++ b/webapps/customer-app/views/list.pug
@@ -25,3 +25,4 @@ html(lang="en")
                     td
                         a(href="/delete?CustomerId=" + customer.id)
                             button delete
+    h3= environment
