some webapp stuff

--- a/webapps/customer-app/views/list.pug
+++ b/webapps/customer-app/views/list.pug
@@ -18,6 +18,7 @@ html(lang="en")
                 tr
                     td= customer.firstName
                     td= customer.lastName
+                    td= customer.fullname
                     td= customer.phoneNumber
                     td
                         a(href="/add?CustomerId=" + customer.id)
